samples/_failures_safe/1761160898_7b57e5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_39c49f35.c: In function ‘parser_init’:
./samples/SAFE/__tmp_39c49f35.c:152:29: error: ‘lexer_next’ undeclared (first use in this function); did you mean ‘lexer_peek’?
  152 |     parser->current_token = lexer_next
      |                             ^~~~~~~~~~
      |                             lexer_peek
./samples/SAFE/__tmp_39c49f35.c:152:29: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_39c49f35.c:152:39: error: expected ‘;’ at end of input
  152 |     parser->current_token = lexer_next
      |                                       ^
      |                                       ;
./samples/SAFE/__tmp_39c49f35.c:152:5: error: expected declaration or statement at end of input
  152 |     parser->current_token = lexer_next
      |     ^~~~~~
